# proto-awscli

./: Cargo.toml  README.md
.github/workflows/: _reusable-cargo-build.yaml  _reusable-e2e.yaml  _reusable-release.yaml  ci.yaml  release.yaml
src/: lib.rs
tests/: integration_test.rs
