[package]
name = "proto-awscli"
version = "0.1.0"
edition = "2024"
description = "Proto WASM plugin for AWS CLI v2."
authors = ["ageha734"]
license = "MIT"
repository = "https://github.com/ageha734/proto-awscli"
publish = false

[features]
default = []
wasm = []

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.1"
proto_pdk = "0.32.8"

[dev-dependencies]
proto_pdk_test_utils = "0.45.1"
starbase_sandbox = "0.8.2"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
